non_app_specific_manifests/volumes_ingress_namespace/manifests/todoNamespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-namespace
  labels:
    name: todo-namespace
