non_app_specific_manifests/volumes_ingress_namespace/manifests/ingressGKE.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: todo-namespace
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-app-svc
            port:
              number: 1234
      - pathType: Prefix
        path: "/pingapi"
        backend:
          service:
            name: pingpong-app-svc
            port:
              number: 3456
      - pathType: Prefix
        path: "/todoapi"
        backend:
          service:
            name: todo-app-svc
            port:
              number: 2345
      - pathType: Prefix
        path: "/logapi"
        backend:
          service:
            name: logoutput-app-svc
            port:
              number: 4567
